--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Telecom Engineer</title>
+		<title>Push-to-Talk</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="yandex-verification" content="f91230e2dc3c85db" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-			<div id="main">
 
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2> 💾 💻 📡 </h2>
-						</header>
+		<!-- Wrapper -->
+			<div id="wrapper" class="fade-in">
+
+				<!-- Intro -->
+					<div id="intro">
+						<h1>IP-PTT<br />
+						PTT over Cellular</h1>
+						<p>Современная технология оперативно-диспетчерской связи на базе широкополосного доступа
+
+					</p>
+						
+					</div>
+
+							
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
