--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>📡<br />
+						<h1>!<br />
 						-</h1>
-						<p>-
+						<p>📡 Сайт находится в разработке
 					</p>
 						
 					</div>
