--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 					<div id="intro">
 						<h1>!<br />
 						</h1>
-						<p>📡 Сайт находится в разработке
+						<p> 📡 <br />
+							Сайт находится в разработке
 					</p>
 						
 					</div>
