--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Push-to-Talk</title>
-		<link rel="shortcut icon" href="/images/icon.png" type="image/png">
+		<link rel="shortcut icon" href="/images/icon.svg" type="image/svg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
