--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Starter Template - Materialize</title>
+  <title>POC PTT over Cellular</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
@@ -30,9 +30,10 @@
               <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             </div>
           </nav>
-
           
-          <h1 class="header center #333">Push To Talk Over Cellular</h1>
+
+          <img src="pic/net.jpg" alt="">
+          <h1 class="header center #333">Push-To-Talk Over Cellular</h1>
           <div class="row">
           <p>Аналогично классическим транкинговым системам (DMR, TETRA) – это организация профессиональной мобильной связи. Глобальное радиопокрытие. Низкая стоимость разворачивания системы: вам не нужно устанавливать базовое оборудование, используются существующие сети передачи данных. Низкая себестоимость, как следствие снижение затрат на эксплуатацию. Возможность передачи видео, передача файлов и медиафайлов, GPS/GLONASS позиционирование.</p>
           </div>
