--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         
         <div class="container #ffffff white">
           <nav class="#424242 grey darken-3 lighten-1" role="navigation">
-            <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+            <div class="nav-wrapper container">
+              <a id="logo-container" href="https://ipptt.ru" title="На главную страницу" class="brand-logo">
+              <img src="pic/logo.png"></a>
               <ul class="right hide-on-med-and-down">
                    <li><a href="#">Navbar Link</a></li>
               </ul>
