--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <!-- <div class="row"> -->
       <!-- <div class="card col s12 m6 "> -->
         
-        <div class="container #ffffff white">
+        <div class="container">
           <nav class="#424242 grey darken-3 lighten-1" role="navigation">
-            <div class="nav-wrapper container">
+            <div class="nav-wrapper">
               <a id="logo-container" href="https://ipptt.ru" title="На главную страницу" class="brand-logo">
-              <img src="pic/logo.png"></a>
+              <img src="pic/logo.png" id="logo"></a>
               <ul class="right hide-on-med-and-down">
                    <li><a href="#">Navbar Link</a></li>
               </ul>
@@ -35,7 +35,7 @@
           </nav>
           
 
-          <img src="pic/net.jpg" alt="">
+          <img src="pic/net.jpg" alt="" class="main-pic">
           <h1 class="header center #333">Push-To-Talk Over Cellular</h1>
           <div class="row">
           <p>Аналогично классическим транкинговым системам (DMR, TETRA) – это организация профессиональной мобильной связи. Глобальное радиопокрытие. Низкая стоимость разворачивания системы: вам не нужно устанавливать базовое оборудование, используются существующие сети передачи данных. Низкая себестоимость, как следствие снижение затрат на эксплуатацию. Возможность передачи видео, передача файлов и медиафайлов, GPS/GLONASS позиционирование.</p>
