--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
               <a id="logo-container" href="https://ipptt.ru" title="На главную страницу" class="brand-logo">
               <img src="pic/logo.png" id="logo"></a>
               <ul class="right hide-on-med-and-down">
-                   <li><a href="#">Navbar Link</a></li>
+                   <li><a href="#">Подробнее</a></li>
+                   <li><a href="#">Контакты</a></li>
               </ul>
 
               <ul id="nav-mobile" class="sidenav">
-                <li><a href="#">Navbar Link</a></li>
+                <li><a href="#">Контакты</a></li>
               </ul>
               <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             </div>
