--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
           <div class="row center">
             <p align="justify">Технология POC - это PTT вызов через сотовую сеть (через сети широкополосного доступа). Эта технология обеспечивает профессиональную оперативную радиосвязь (аналогично системам TETRA или DMR) используя сети передачи данных сотовых операторов, такие как 3G/4G (LTE) или Wi-Fi. В сотрудничестве с разными разработчиками и компаниями мы развиваем POC технологию в России.</p>
-            <p align="justify">В отличие от других компаний работающих в России мы готовы предложить интеграцию различных систем от разных производителей для обеспечения высочайшего качества и надежности предоставляемых услуг.</p>
+            <p align="justify" class="right hide-on-med-and-down">В отличие от других компаний работающих в России мы готовы предложить интеграцию различных систем от разных производителей для обеспечения высочайшего качества и надежности предоставляемых услуг.</p>
             <a href="#" id="download-button" class="btn-large waves-effect waves-light orange">ПОДРОБНЕЕ</a>
           </div>
         
