--- a/source/contacts.html
+++ b/source/contacts.html
@@ -21,7 +21,7 @@
             <div class="nav-wrapper">
               <div class="container">
               <a id="logo-container" href="https://ipptt.ru" title="На главную страницу" class="brand-logo">
-              <img src="../pic/logo.png" id="logo"></a>
+              <img src="../pic/logo.svg" id="logo"></a>
               <ul class="right hide-on-med-and-down">
                    <li><a href="#">Подробнее</a></li>
                    <li><a href="#">Контакты</a></li>
