--- a/index.html
+++ b/index.html
@@ -44,45 +44,49 @@
             <div class="row">
 
 
-
-              <div class="col s12 l4">
-                <div class="card">
-                  <div class="card-image">
-                    <img src="pic/runbo.jpg">
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Терминалы POC</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col s12 l4">
-                <div class="card">
-                  <div class="card-image">
-                    <img src="pic/servr2.jpg">
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Серверные станции</span>  
+              <a href="source/terminals.html">
+                <div class="col s12 l4">
+                  <div class="card">
+                    <div class="card-image">
+                      <img src="pic/runbo.jpg">
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title">Терминалы POC</span>
+                    </div>
                   </div>
                 </div>
-              </div>
+              </a>
 
-              <div class="col s12 l4">
-                <div class="card">
-                  <div class="card-image">
-                    <img src="pic/notebook.jpg">
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Программное обеспечение</span>
+              <a href="source/terminals.html">
+                <div class="col s12 l4">
+                  <div class="card">
+                    <div class="card-image">
+                      <img src="pic/servr2.jpg">
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title">Серверные станции</span>  
+                    </div>
                   </div>
                 </div>
-              </div>
+              </a>
 
+              <a href="source/terminals.html">
+                <div class="col s12 l4">
+                  <div class="card">
+                    <div class="card-image">
+                      <img src="pic/notebook.jpg">
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title">Программное обеспечение</span>
+                    </div>
+                  </div>
+                </div>
+              </a>
 
 
             </div>
           </div>
-          
+
         </div>
            
 
