--- a/index.html
+++ b/index.html
@@ -21,9 +21,21 @@
                 <a id="logo-container" href="https://ipptt.ru" title="На главную страницу" class="brand-logo">
                 <img src="pic/logo.svg" id="logo"></a>
                 <ul class="right hide-on-med-and-down">
+                  <li><a href="source/#">О технологии</a></li>
+                  <li><a href="source/#">Архитектура</a></li>
+                  <li><a href="source/#">Возможности</a></li>
+                  <li><a href="source/#">Области применения</a></li>
+                  <li><a href="source/terminals.html">Терминалы</a></li>
+                  <li><a href="source/#">Аксессуары</a></li>
                   <li><a href="source/contacts.html">Контакты</a></li>
                 </ul>
                 <ul id="nav-mobile" class="sidenav">
+                  <li><a href="source/#">О технологии</a></li>
+                  <li><a href="source/#">Архитектура</a></li>
+                  <li><a href="source/#">Возможности</a></li>
+                  <li><a href="source/#">Области применения</a></li>
+                  <li><a href="source/terminals.html">Терминалы</a></li>
+                  <li><a href="source/#">Аксессуары</a></li>
                   <li><a href="source/contacts.html">Контакты</a></li>
                 </ul>
                 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -33,7 +45,7 @@
 
         <div class="container">      
           
-          <h1 class="header center #333">Технология Push-To-Talk Over Cellular</h1>
+          <h1 class="header center #333">Мгновенная связь без ограничений</h1>
           <div class="row center">
             <p align="justify">Технология POC - это PTT вызов через сотовую сеть (через сети широкополосного доступа). Эта технология обеспечивает профессиональную оперативную радиосвязь (аналогично системам TETRA или DMR) используя сети передачи данных сотовых операторов, такие как 3G/4G (LTE) или Wi-Fi. В сотрудничестве с разными разработчиками и компаниями мы развиваем POC технологию в России.</p>
             <p align="justify" class="right hide-on-med-and-down">В отличие от других компаний работающих в России мы готовы предложить интеграцию различных систем от разных производителей для обеспечения высочайшего качества и надежности предоставляемых услуг.</p>
