--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
           <div class="row center">
             <p align="justify">Технология POC - это PTT вызов через сотовую сеть (через сети широкополосного доступа). Эта технология обеспечивает профессиональную оперативную радиосвязь (аналогично системам TETRA или DMR) используя сети передачи данных сотовых операторов, такие как 3G/4G (LTE) или Wi-Fi. В сотрудничестве с разными разработчиками и компаниями мы развиваем POC технологию в России.</p>
             <p align="justify" class="right hide-on-med-and-down">В отличие от других компаний работающих в России мы готовы предложить интеграцию различных систем от разных производителей для обеспечения высочайшего качества и надежности предоставляемых услуг.</p>
-            <a href="#" id="download-button" class="btn-large waves-effect waves-light orange">ПОДРОБНЕЕ</a>
+            <a href="source/description.html" id="download-button" class="btn-large waves-effect waves-light blue">ПОДРОБНЕЕ</a>
           </div>
         
           <div class="row center">
             <div class="row">
 
 
-              <a href="source/terminals.html">
+              <a href="source/description.html">
                 <div class="col s12 l4">
                   <div class="card">
                     <div class="card-image">
-                      <img src="pic/runbo.jpg">
+                      <img src="pic/Howitworks.png">
                     </div>
                     <div class="card-content">
-                      <span class="card-title">Терминалы POC</span>
+                      <span class="card-title">О технологии</span>
                     </div>
                   </div>
                 </div>
@@ -73,10 +73,10 @@
                 <div class="col s12 l4">
                   <div class="card">
                     <div class="card-image">
-                      <img src="pic/servr2.jpg">
+                      <img src="pic/arch.png">
                     </div>
                     <div class="card-content">
-                      <span class="card-title">Серверные станции</span>  
+                      <span class="card-title">Архитектура сети</span>  
                     </div>
                   </div>
                 </div>
@@ -86,10 +86,10 @@
                 <div class="col s12 l4">
                   <div class="card">
                     <div class="card-image">
-                      <img src="pic/notebook.jpg">
+                      <img src="pic/new.png">
                     </div>
                     <div class="card-content">
-                      <span class="card-title">Программное обеспечение</span>
+                      <span class="card-title">Возможности</span>
                     </div>
                   </div>
                 </div>
