--- a/source/description.html
+++ b/source/description.html
@@ -40,7 +40,7 @@
 
           <div class="row">
             <div class="col s12 l4">
-              <img src="../pic/runbo23.jpg" class="terminals">
+              <img src="../pic/Howitworks.png" class="terminals">
             </div>
             <div class="col s12 l8">
               <h5>Специализированные смартфоны с кнопкой PTT </h5>
