--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
               </a>
 
-              <a href="source/terminals.html">
+              <a href="source/arch.html">
                 <div class="col s12 l4">
                   <div class="card">
                     <div class="card-image">
