--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <img src="pic/net.png" width="1300">
 
           <div class="row center">
-            <p align="justify">Представляем новую технологию оперативной радиосвязи. Система InternetPTT использует широкополосную передачу данных LTE позволяет охватить всю территорию России.</p>
+            <p align="justify">Представляем новую технологию оперативной радиосвязи. Система InternetPTT использует широкополосную передачу данных LTE и позволяет охватить всю территорию России.</p>
             <p align="justify" class="right hide-on-med-and-down">Вы можете совершать голосовые и видео вызовы, работать с геоинформационными системами, передавать мультимедийные данные и это все без необходимости строить дорогостоящую инфравтруктуру. Система InternetPTT защищена и зашифрована, поэтому информацию невозможно перехватить.</p>
             <a href="source/description.html" id="download-button" class="btn-large waves-effect waves-light blue">ПОДРОБНЕЕ</a>
           </div>
