--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="col s12 l4">
                   <div class="card">
                     <div class="card-image">
-                      <img src="pic/Howitworks.png">
+                      <img src="pic/howitworks.png">
                     </div>
                     <div class="card-content">
                       <span class="card-title">О технологии</span>
