--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <h1 class="header center #333">Мгновенная связь без ограничений</h1>
 
-          <img src="pic/net.png" width="1300">
+          <div id="mainpic"></div>
 
           <div class="row center">
             <p align="justify">Представляем новую технологию оперативной радиосвязи. Система InternetPTT использует широкополосную передачу данных LTE и позволяет охватить всю территорию России.</p>
