mobile nav menu works!

--- a/source/contacts.html
+++ b/source/contacts.html
@@ -20,20 +20,32 @@
         <nav class="#424242 grey darken-3 lighten-1" role="navigation">
             <div class="nav-wrapper">
               <div class="container">
-              <a id="logo-container" href="https://ipptt.ru" title="На главную страницу" class="brand-logo">
-              <img src="../pic/logo.svg" id="logo"></a>
-              <ul class="right hide-on-med-and-down">
-                   <li><a href="#">Подробнее</a></li>
-                   <li><a href="#">Контакты</a></li>
-              </ul>
+                <a id="logo-container" href="https://ipptt.ru" title="На главную страницу" class="brand-logo">
+                <img src="../pic/logo.svg" id="logo"></a>
+                <ul class="right hide-on-med-and-down">
+                  <li><a href="#">О технологии</a></li>
+                  <li><a href="#">Возможности</a></li>
+                  <li><a href="#">Архитектура</a></li>
+                  <li><a href="#">Области применения</a></li>
+                  <li><a href="#">Терминалы</a></li>
+                  <li><a href="#">Аксессуары</a></li>
+                  <li><a href="../source/contacts.html">Контакты</a></li>
+                </ul>
 
-              <ul id="nav-mobile" class="sidenav">
-                <li><a href="#">Контакты</a></li>
-              </ul>
-              <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            </div>
+                <ul id="nav-mobile" class="sidenav">
+                  <li><a href="#">О технологии</a></li>
+                  <li><a href="#">Возможности</a></li>
+                  <li><a href="#">Архитектура</a></li>
+                  <li><a href="#">Области применения</a></li>
+                  <li><a href="#">Терминалы</a></li>
+                  <li><a href="#">Аксессуары</a></li>
+                  <li><a href="../source/contacts.html">Контакты</a></li>
+                </ul>          
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+              </div>
             </div>
         </nav>
+
 
         <div class="container white">
           <ul class="collection with-header">
@@ -45,12 +57,11 @@
           </ul>
         </div>
            
-<!-- align="justify" -->
 
   <!--  Scripts-->
-  <!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="../js/materialize.js"></script>
+  <script src="../js/init.js"></script>
 
   </body>
 </html>
