--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
                 <a id="logo-container" href="https://ipptt.ru" title="На главную страницу" class="brand-logo">
                 <img src="pic/logo.svg" id="logo"></a>
                 <ul class="right hide-on-med-and-down">
-                  <li><a href="source/#">О технологии</a></li>
-                  <li><a href="source/#">Архитектура</a></li>
-                  <li><a href="source/#">Возможности</a></li>
-                  <li><a href="source/#">Области применения</a></li>
-                  <li><a href="source/terminals.html">Терминалы</a></li>
-                  <li><a href="source/#">Аксессуары</a></li>
+                  <li><a href="#">О технологии</a></li>
+                  <li><a href="#">Возможности</a></li>
+                  <li><a href="#">Архитектура</a></li>
+                  <li><a href="#">Области применения</a></li>
+                  <li><a href="#">Терминалы</a></li>
+                  <li><a href="#">Аксессуары</a></li>
                   <li><a href="source/contacts.html">Контакты</a></li>
                 </ul>
                 <ul id="nav-mobile" class="sidenav">
-                  <li><a href="source/#">О технологии</a></li>
-                  <li><a href="source/#">Архитектура</a></li>
-                  <li><a href="source/#">Возможности</a></li>
-                  <li><a href="source/#">Области применения</a></li>
-                  <li><a href="source/terminals.html">Терминалы</a></li>
-                  <li><a href="source/#">Аксессуары</a></li>
+                  <li><a href="#">О технологии</a></li>
+                  <li><a href="#">Возможности</a></li>
+                  <li><a href="#">Архитектура</a></li>                  
+                  <li><a href="#">Области применения</a></li>
+                  <li><a href="#">Терминалы</a></li>
+                  <li><a href="#">Аксессуары</a></li>
                   <li><a href="source/contacts.html">Контакты</a></li>
                 </ul>
                 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -55,7 +55,7 @@
           <div class="row center">
             <p align="justify">Представляем новую технологию оперативной радиосвязи. Система InternetPTT использует широкополосную передачу данных LTE и позволяет охватить всю территорию России.</p>
             <p align="justify" class="right hide-on-med-and-down">Вы можете совершать голосовые и видео вызовы, работать с геоинформационными системами, передавать мультимедийные данные и это все без необходимости строить дорогостоящую инфравтруктуру. Система InternetPTT защищена и зашифрована, поэтому информацию невозможно перехватить.</p>
-            <a href="source/description.html" id="download-button" class="btn-large waves-effect waves-light blue">ПОДРОБНЕЕ</a>
+            <!-- <a href="source/description.html" id="download-button" class="btn-large waves-effect waves-light blue">ПОДРОБНЕЕ</a> -->
           </div>
         
           <div class="row center">
@@ -109,7 +109,7 @@
            
 
   <!--  Scripts-->
-  <!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 
